--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -17,8 +17,8 @@
         <div class="list-group list-group-flush">
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/home">Dashboard</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/manageUsers">Manage Users</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Manage User Groups</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Events</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/manageGroups">Manage User Groups</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/viewLogs">View Logs</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
         </div>
