--- a/views/manageUsers.ejs
+++ b/views/manageUsers.ejs
@@ -1,1 +1,53 @@
-<h1>Manage Users</h1>
+<h1 class="mt-4">Manage Users</h1>
+
+<%
+  if (users.length > 0) {
+    %>
+    <table id="usersTable" class="display">
+      <thead>
+        <tr>
+          <th>Username</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>User Group</th>
+          <th>Is Locked</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% users.forEach(function(user) { %>
+        <tr>
+          <td><%= user.username %></td>
+          <td><%= user.first_name %></td>
+          <td><%= user.last_name %></td>
+          <td><%= user.usergroup %></td>
+          <td><%= user.is_locked %></td>
+          <td>
+            <form method="post" action="/api/users/delete">
+              <input type="hidden" name="username" value="<%= user.username %>">
+              <button class="btn btn-danger">Delete</button>
+            </form>
+          </td>
+        </tr>
+        <% }); %>
+      </tbody>
+    </table>
+    <%
+  } else {
+    %>
+    <p>No users found</p>
+    <%
+  }
+%>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<link href="//cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css" rel="stylesheet">
+<script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+
+
+<script>
+  $(document).ready(function() {
+    $('#usersTable').DataTable();
+  });
+</script>
