--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,39 @@
 <h1 class="mt-4">Admin Dashboard</h1>
+<div class="row">
+  <div class="col-sm-3">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Company Name</h5>
+        <p class="card-text"><%= company.company_name%></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-3">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Total Users</h5>
+        <p class="card-text"><%= userCnt%></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-3">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Total Actions</h5>
+        <p class="card-text"><%= userActionCtn%></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-3">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">User Groups </h5>
+        <p class="card-text"><%= userGroupCnt%></p>
+      </div>
+    </div>
+  </div>
+</div>
 
-<p>Total Users : <%= userCnt %></p>
-<p>Total Actions : <%= userAction %></p>
-<p>Total UserGroups : <%= userGroupCnt %></p>
 <form method="post" action="/api/users/add">
   <input placeholder="Username" type="text" name="username">
   <input placeholder="First name" type="text" name="first_name">
