--- a/views/manageUsers.ejs
+++ b/views/manageUsers.ejs
@@ -1,4 +1,13 @@
-<h1 class="mt-4">Manage Users</h1>
+<div class="row mt-4">
+  <div class="col">
+    <h1 class="">Manage Users</h1>
+  </div>
+  <div class="col">
+    <button type="button" class="btn btn-success"
+    data-bs-toggle="modal" data-bs-target="#userModal">
+      Add User
+    </button>
+</div>
 
 <%
   if (users.length > 0) {
@@ -16,20 +25,43 @@
       </thead>
       <tbody>
         <% users.forEach(function(user) { %>
-        <tr>
+        <tr id="<%= user.username %>">
           <td><%= user.username %></td>
           <td><%= user.first_name %></td>
           <td><%= user.last_name %></td>
           <td><%= user.usergroup %></td>
           <td><%= user.is_locked %></td>
           <td>
-            <form method="post" action="/api/users/delete">
-              <input type="hidden" name="username" value="<%= user.username %>">
-              <button class="btn btn-danger">Delete</button>
-            </form>
+            <button type="button" onclick="editUser('<%= user.username%>')" class="btn btn-primary">
+              Edit
+            </button>
+            <button type="button" onclick="deleteUser('<%= user.username%>')" class="btn btn-danger">
+              Delete
+            </button>
           </td>
         </tr>
         <% }); %>
+        <!-- <tr>
+          <form method="post" action="/api/users/add">
+            <td><input placeholder="Username" type="text" name="username"></td>
+            <td><input placeholder="First name" type="text" name="first_name"></td>
+            <td><input placeholder="Last Name" type="text" name="last_name"></td>
+            <td>
+              <select>
+                <%
+                  userGroups.forEach(function(userGroup) {
+                    %> <option value="<%= userGroup.group_name %>"><%= userGroup.group_name %></option>
+                    <%
+                  });
+                %>
+              </select>
+            </td>
+            <td></td>
+            <td>
+              <button type="submit" class="btn btn-success">Add</button>
+            </td>
+          </form>
+        </tr> -->
       </tbody>
     </table>
     <%
@@ -41,6 +73,65 @@
 %>
 
 
+<!-- Modal to manage users -->
+<div class="modal fade" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="userModalLabel">Manage User</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="userForm" action="api/users/add" method="post">
+          <div class="mb-3">
+            <label for="username" class="col-form-label">Username:</label>
+            <input name="username" type="text" class="form-control" id="username">
+          </div>
+          <div class="mb-3">
+            <label for="username" class="col-form-label">Password:</label>
+            <input name="password" type="password" class="form-control" id="username">
+          </div>
+          <div class="mb-3">
+            <label for="first-name" class="col-form-label">First Name:</label>
+            <input name="first_name" type="text" class="form-control" id="first-name">
+          </div>
+          <div class="mb-3">
+            <label for="last-name" class="col-form-label">Last Name:</label>
+            <input name="last_name" type="text" class="form-control" id="last-name">
+          </div>
+          <div class="mb-3">
+            <label for="user-group" class="col-form-label">User Group:</label>
+            <select name='userGroup' class="form-select" id="user-group" aria-label="Default select example">
+              <%
+                userGroups.forEach(function(userGroup) {
+                  %> <option
+                  <% if(userGroup.group_name == 'default') {
+                    %> selected <%
+                  } %>
+                  value="<%= userGroup.group_name %>"><%= userGroup.group_name %></option>
+                  <%
+                });
+              %>
+            </select>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button form="userForm" type="submit" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <link href="//cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css" rel="stylesheet">
 <script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
@@ -50,4 +141,40 @@
   $(document).ready(function() {
     $('#usersTable').DataTable();
   });
+
+  function deleteUser(username) {
+    $.ajax({
+      url: '/api/users/delete',
+      type: 'DELETE',
+      data: {
+        username: username
+      },
+      success: function(result) {
+        // delete row
+        $('#usersTable').DataTable().row('#' + username).remove().draw();
+        alert(result);
+      },
+      error: function(result) {
+        alert(result.responseText);
+      }
+    });
+  }
+
+  // function populate modal with user data
+  function editUser(username) {
+
+    // query datatable for user data
+
+    var result = $('#usersTable').DataTable().row('#' + username).data();
+    console.log(result)
+    $('#userModal').modal('show');
+    $('#userModalLabel').text('Edit User');
+    $('#username').val(result[0]);
+    $('#first-name').val(result[1]);
+    $('#last-name').val(result[2]);
+    $('#user-group').val(result[3]);
+    $('#userForm').attr('action', '/api/users/edit');
+
+  }
+
 </script>
