Added lock and unlock logic

--- a/views/viewLogs.ejs
+++ b/views/viewLogs.ejs
@@ -6,6 +6,7 @@
     <table id="logsTable" class="display">
       <thead>
         <tr>
+          <th>Action ID</th>
           <th>Username</th>
           <th>Action</th>
           <th>File Name</th>
@@ -16,6 +17,7 @@
       <tbody>
         <% logs.forEach(function(log) { %>
         <tr>
+          <td><%= log.action_id %></td>
           <td><%= log.username %></td>
           <td><%= log.action %></td>
           <td><%= log.filename %></td>
