--- a/views/manageUsers.ejs
+++ b/views/manageUsers.ejs
@@ -4,7 +4,7 @@
   </div>
   <div class="col">
     <button type="button" class="btn btn-success"
-    data-bs-toggle="modal" data-bs-target="#userModal">
+    onclick="addUserModal()">
       Add User
     </button>
 </div>
@@ -30,7 +30,13 @@
           <td><%= user.first_name %></td>
           <td><%= user.last_name %></td>
           <td><%= user.usergroup %></td>
-          <td><%= user.is_locked %></td>
+          <td id = 'isLocked_<%= user.username%>'>
+            <% if(user.is_locked) { %>
+              <span class="badge bg-danger">Locked</span>
+            <% } else { %>
+              <span class="badge bg-success">Unlocked</span>
+            <% } %>
+          </td>
           <td>
             <button type="button" onclick="editUser('<%= user.username%>')" class="btn btn-primary">
               Edit
@@ -38,6 +44,15 @@
             <button type="button" onclick="deleteUser('<%= user.username%>')" class="btn btn-danger">
               Delete
             </button>
+            <% if(user.is_locked) { %>
+              <button type="button" onclick="lockOrUnlockUser('<%= user.username%>', false)" class="btn btn-success">
+                Unlock User
+              </button>
+            <% } else { %>
+              <button type="button" onclick="lockOrUnlockUser('<%= user.username%>', true)" class="btn btn-warning">
+                Lock User
+              </button>
+            <% } %>
           </td>
         </tr>
         <% }); %>
@@ -89,7 +104,7 @@
           </div>
           <div class="mb-3">
             <label for="username" class="col-form-label">Password:</label>
-            <input name="password" type="password" class="form-control" id="username">
+            <input id="password" name="password" type="password" class="form-control" id="username">
           </div>
           <div class="mb-3">
             <label for="first-name" class="col-form-label">First Name:</label>
@@ -160,6 +175,18 @@
     });
   }
 
+  // function to clear modal
+  function addUserModal() {
+    $('#userModalLabel').text('Add User');
+    $('#userForm').attr('action', '/api/users/add');
+    $('#username').val('');
+    $('#first-name').val('');
+    $('#last-name').val('');
+    $('#user-group').val('default');
+    $('#password').prop('disabled', false)
+    $('#userModal').modal('show');
+  }
+
   // function populate modal with user data
   function editUser(username) {
 
@@ -169,12 +196,50 @@
     console.log(result)
     $('#userModal').modal('show');
     $('#userModalLabel').text('Edit User');
+    $('#userForm').attr('action', '/api/users/update');
+    $('#password').prop('disabled', true)
     $('#username').val(result[0]);
     $('#first-name').val(result[1]);
     $('#last-name').val(result[2]);
     $('#user-group').val(result[3]);
-    $('#userForm').attr('action', '/api/users/edit');
 
+  }
+
+  function lockOrUnlockUser(username, isLocked){
+    $.ajax({
+      url: '/api/lockOrUnlockUser',
+      type: 'POST',
+      data: {
+        username: username,
+        isLocked: isLocked
+      },
+      success: function(result) {
+        // update row in table
+        var row = $('#usersTable').DataTable().row('#' + username);
+        var data = row.data();
+        let btnArray = data[5].split(`<button`);
+        btnArray.pop()
+        let btnString = btnArray.join(`<button`)
+        if(isLocked){
+          data[4] = '<span class="badge bg-danger">Locked</span>';
+          // the last button to unlock
+          btnString = btnString += `<button type="button" onclick="lockOrUnlockUser('${username}', false)" class="btn btn-success">
+            Unlock User
+            </button>`;
+          data[5] = btnString;
+        } else {
+          data[4] = '<span class="badge bg-success">Unlocked</span>';
+          data[5] = btnString += `<button type="button" onclick="lockOrUnlockUser('${username}', true)" class="btn btn-warning">
+            Lock User
+            </button>`;
+        }
+        row.data(data).draw();
+
+      },
+      error: function(result) {
+        alert(result.responseText);
+      }
+    });
   }
 
 </script>
