--- a/views/manageGroups.ejs
+++ b/views/manageGroups.ejs
@@ -58,31 +58,31 @@
       <div class="modal-body">
         <form id="groupForm" action="api/users/add" method="post">
           <div class="mb-3">
-            <label for="username" class="col-form-label">Group Name:</label>
-            <input name="group_name" type="text" class="form-control" id="username">
+            <label for="group_name" class="col-form-label">Group Name:</label>
+            <input name="group_name" type="text" class="form-control" id="group_name">
           </div>
           <div class="mb-3">
-            <label for="username" class="col-form-label">Min Pin Length:</label>
-            <input id="min_pass" name="min_pas" type="text" class="form-control" id="username">
+            <label for="min_pass" class="col-form-label">Min Pin Length:</label>
+            <input id="min_pass" name="min_pass" type="text" class="form-control" id="min_pass">
           </div>
           <div class="mb-3">
-            <input class="form-check-input" type="checkbox" value="" id="cb_require_biometrics" name="require_biometrics">
+            <input class="form-check-input" type="checkbox" value="true" id="cb_require_biometrics" name="require_biometrics">
             <label class="form-check-label" for="cb_require_biometrics">
               Require Biometrics
             </label>
           </div>
           <div class="mb-3">
-            <input class="form-check-input" type="checkbox" value="" id="cb_require_encryption" name="require_encryption">
+            <input class="form-check-input" type="checkbox" value="true" id="cb_require_encryption" name="require_encryption">
             <label class="form-check-label" for="cb_require_encryption">
               Require Encryption
             </label>
           </div>
           <div class="mb-3">
-            <label for="user-group" class="col-form-label">Pin Max Tries:</label>
+            <label for="pin_max_tries" class="col-form-label">Pin Max Tries:</label>
             <input name="pin_max_tries" type="text" class="form-control" id="pin_max_tries">
           </div>
           <div class="mb-3">
-            <label for="user-group" class="col-form-label">Pin Type:</label>
+            <label for="pin_type" class="col-form-label">Pin Type:</label>
             <select name='pin_type' class="form-select" id="pin_type" aria-label="Default select example">
               <option value="pin">Numeric</option>
               <option value="pass">Alpha-Numeric</option>
@@ -93,7 +93,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button form="userForm" type="submit" class="btn btn-primary">Save changes</button>
+        <button form="groupForm" type="submit" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
@@ -112,7 +112,14 @@
 
   function addGroupModal() {
     // Clear the form
-    $('#userForm').trigger("reset");
+    $('#group_name').val("");
+    $('#min_pass').val("");
+    $('#cb_require_biometrics').prop('checked', false);
+    $('#cb_require_encryption').prop('checked', false);
+    $('#pin_max_tries').val("");
+    $('#pin_type').val("pin");
+    // Set the form action
+    $('#groupForm').attr('action', 'api/groups/create');
     $('#groupModal').modal('show');
   }
 
@@ -120,21 +127,18 @@
     // Clear the form
     $('#userForm').trigger("reset");
 
-
-
     // Get the user data from datatable
     var table = $('#groupsTable').DataTable();
     var result = table.row("#" + groupName).data()
     // Set the form values
-    console.log(result)
-    $('#username').val(result[0]);
+    $('#group_name').val(result[0]);
     $('#min_pass').val(result[1]);
     $('#cb_require_biometrics').prop('checked',  result[2] == 'true');
     $('#cb_require_encryption').prop('checked', result[3] == 'true');
     $('#pin_max_tries').val(result[4]);
     $('#pin_type').val(result[5]);
     // Set the form action
-    $('#userForm').attr('action', '/api/groups/' + groupName);
+    $('#userForm').attr('action', '/api/groups/update');
     // Show the modal
     $('#groupModal').modal('show');
 
