--- a/views/manageGroups.ejs
+++ b/views/manageGroups.ejs
@@ -22,6 +22,7 @@
           <th>Require Encryption</th>
           <th>Pin Max Tries</th>
           <th>Pin Type</th>
+          <th>Is Admin</th>
           <th>Actions</th>
         </tr>
       </thead>
@@ -34,8 +35,10 @@
           <td><%= group.require_encryption %></td>
           <td><%= group.pin_max_tries %></td>
           <td><%= group.pin_type %></td>
+          <td><%= group.is_admin %></td>
           <td>
             <button class="btn btn-primary" onclick="editGroup('<%= group.group_name%>')">Edit</button>
+            <button class="btn btn-danger" onclick="deleteGroup('<%= group.group_name%>')">Delete</button>
           </td>
         </tr>
         <% }); %>
@@ -56,7 +59,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form id="groupForm" action="api/users/add" method="post">
+        <form id="groupForm" action="" method="post">
           <div class="mb-3">
             <label for="group_name" class="col-form-label">Group Name:</label>
             <input name="group_name" type="text" class="form-control" id="group_name">
@@ -75,6 +78,12 @@
             <input class="form-check-input" type="checkbox" value="true" id="cb_require_encryption" name="require_encryption">
             <label class="form-check-label" for="cb_require_encryption">
               Require Encryption
+            </label>
+          </div>
+          <div class="mb-3">
+            <input class="form-check-input" type="checkbox" value="true" id="cb_is_admin" name="is_admin">
+            <label class="form-check-label" for="cb_is_admin">
+              Is Admin ?
             </label>
           </div>
           <div class="mb-3">
@@ -116,6 +125,7 @@
     $('#min_pass').val("");
     $('#cb_require_biometrics').prop('checked', false);
     $('#cb_require_encryption').prop('checked', false);
+    $('#cb_is_admin').prop('checked', false);
     $('#pin_max_tries').val("");
     $('#pin_type').val("pin");
     // Set the form action
@@ -126,10 +136,10 @@
   function editGroup(groupName) {
     // Clear the form
     $('#userForm').trigger("reset");
-
     // Get the user data from datatable
     var table = $('#groupsTable').DataTable();
     var result = table.row("#" + groupName).data()
+    console.log(result)
     // Set the form values
     $('#group_name').val(result[0]);
     $('#min_pass').val(result[1]);
@@ -137,12 +147,30 @@
     $('#cb_require_encryption').prop('checked', result[3] == 'true');
     $('#pin_max_tries').val(result[4]);
     $('#pin_type').val(result[5]);
+    $('#cb_is_admin').prop('checked', result[6] == 'true')
     // Set the form action
-    $('#userForm').attr('action', '/api/groups/update');
+    $('#groupForm').attr('action', '/api/groups/update');
     // Show the modal
     $('#groupModal').modal('show');
 
 
+  }
+
+  function deleteGroup(groupName) {
+    if (confirm("Are you sure you want to delete this group?")) {
+      $.ajax({
+        url: '/api/groups/delete',
+        type: 'DELETE',
+        data: {
+          group_name: groupName
+        },
+        success: function(result) {
+          // delete the row from the table
+          var table = $('#groupsTable').DataTable();
+          table.row("#" + groupName).remove().draw();
+        }
+      });
+    }
   }
 
 </script>
