--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,7 +7,10 @@
   <title><%- title %></title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" />
-
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+  <link rel="manifest" href="assets/favicons/site.webmanifest">
 </head>
 <body>
   <div class="d-flex" id="wrapper">
@@ -19,8 +22,8 @@
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/manageUsers">Manage Users</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/manageGroups">Manage User Groups</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/viewLogs">View Logs</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>
+            <!-- <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a> -->
         </div>
     </div>
     <!-- Page content wrapper-->
