--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -8,7 +8,7 @@
         <div class="card shadow-lg">
           <div class="card-body p-5">
             <h1 class="fs-4 card-title fw-bold mb-4">Change Password</h1>
-            <form method="POST" action="/api/login" class="needs-validation" novalidate="" autocomplete="off">
+            <form method="POST" action="/api/users/changePassword" class="needs-validation" novalidate="" autocomplete="off">
               <div class="mb-3">
                 <label class="mb-2 text-muted" for="username">Username</label>
                 <input id="username" type="text" class="form-control" name="username" value="" required autofocus>
