--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -10,7 +10,7 @@
             <h1 class="fs-4 card-title fw-bold mb-4">Change Password</h1>
             <form method="POST" action="/api/users/changePassword" class="needs-validation" novalidate="" autocomplete="off">
               <div class="mb-3">
-                <label class="mb-2 text-muted" for="username">Username</label>
+                <label class="mb-2 text-muted" for="cp_username">Username</label>
                 <input id="username" type="text" class="form-control" name="username" value="" required autofocus>
                 <div class="invalid-feedback">
                   Username is invalid
