--- a/views/viewLogs.ejs
+++ b/views/viewLogs.ejs
@@ -1,5 +1,14 @@
-<h1 class="mt-4">View Logs</h1>
-
+<div class="row mt-4">
+  <div class="col">
+    <h1 class="">View Logs</h1>
+  </div>
+  <div class="col">
+    <!-- <button type="button" class="btn btn-success"
+    onclick='exportCSV()'>
+      Export as CSV
+    </button> -->
+  </div>
+</div>
 <%
   if (logs.length > 0) {
     %>
@@ -32,14 +41,37 @@
     %>
     <p>No logs found</p>
     <%} %>
-
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/json2csv"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <link href="//cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css" rel="stylesheet">
 <script src="//cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
 
+<!-- Scripts for Downloading -->
+<script src="https://cdn.datatables.net/1.13.2/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.3.4/js/dataTables.buttons.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.3.4/js/buttons.html5.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.3.4/js/buttons.print.min.js"></script>
+<script src=""></script>
+
+
+
+
 
 <script>
   $(document).ready(function() {
-    $('#logsTable').DataTable();
+    $('#logsTable').DataTable({
+      dom: 'Bfrtip',
+      buttons: [
+        'csv', 'excel', 'pdf', 'print'
+      ],
+      order: [
+        [0, "desc"]
+      ]
+    });
   });
+
+
 </script>
